2005-06-04  Eero Tamminen  <eerot@sf>
	* src/po/fi.po: Updated translation to 2.0.2 template.pot.
	  Everything except for a few dozen tips is translated.

2005-06-03  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/po/es.po: Translation update for version 2.0.2.

2005-06-03  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: Don't add empty strings to pdmap
	* src/AutoComp.py: don't add empty strings to completion

2005-06-03  Alexander Roitman  <shura@gramps-project.org>
	* src/Utils.py (bold_label,unbold_label,temp_label): optionally
	set cursor.
	* src/EditSource.py (__init__,on_switch_page): Call
	display_references using idle_add; (display_references): set
	cursor when done.
	* src/EditPlace (__init__,on_switch_page): Call
	display_references using idle_add; (display_references): set
	cursor when done.
	* src/ImageSelect (__init__,on_switch_page): Call
	display_references using idle_add; (display_references): set
	cursor when done.

	* src/EditPlace.py, src/EditSource.py: Detect new objects by
	handle.
	* src/const.py.in (save_frel): Return English strings.
	* src/plugins/FamilyGroup.py (parse_user_options): Only select
	spouse if there is any.

2005-06-03  Jens Arvidsson <jya@sverige.nu>
	* src/po/sv.po: Minor fixes found via pochkpyvar.pl.

2005-06-03  Jens Arvidsson <jya@sverige.nu>
	* src/po/sv.po: Translation update for version 2.0.2.

2005-06-02  Don Allingham  <don@gramps-project.org>
	* src/dates/Date_fi.py: Finnish date parser
	* src/dates/Makefile.am: added Date_fi.py
	* src/ChooseParents.py: fixed all_males filtering problem, display
	all people when a person is blocked by the likely filter

2005-06-02  Alex Roitman  <shura@gramps-project.org>
	* src/ReadGedcom.py (get_next): Use single space to split the line
	into level, tag, and the field contents; strip extra white space
	off the tag name.
	* src/po/ru.po: Update for 2.0.2.
	* NEWS: Update.

2005-06-01  Martin Hawlisch  <Martin.Hawlisch@gmx.de>