@@ -98,10 +98,10 @@ class DateParserES(DateParser):
         _span_2 = [u'a']
         _range_1 = [u'ent.',u'ent',u'entre']
         _range_2 = [u'y']
-        self._span     = re.compile("(%s)\s+(.+)\s+(%s)\s+(.+)" % 
+        self._span     = re.compile("(%s)\s+(?P<start>.+)\s+(%s)\s+(?P<stop>.+)" % 
                                    ('|'.join(_span_1),'|'.join(_span_2)),
                            re.IGNORECASE)
-        self._range    = re.compile("(%s)\s+(.+)\s+(%s)\s+(.+)" %
+        self._range    = re.compile("(%s)\s+(?P<start>.+)\s+(%s)\s+(?P<stop>.+)" %
                                    ('|'.join(_range_1),'|'.join(_range_2)),
                            re.IGNORECASE)
 
